--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "winstacks"
 description = "Collect CPU call stack samples from a windows process"
-version = "0.1.0-alpha1"
+version = "0.1.0-alpha2"
 edition = "2021"
 license = "MIT OR Apache-2.0 OR BSL-1.0 OR MPL-2.0 OR Zlib OR Unlicense"
 homepage = "https://github.com/nico-abram/winstacks/"
@@ -9,7 +9,11 @@ repository = "https://github.com/nico-abram/winstacks/"
 documentation = "https://docs.rs/winstacks"
 readme = "README.md"
 keywords = ["windows", "profiling", "sampling", "callstack", "perf"]
-categories = ["Command line utilities", "Profiling", "Visualization"]
+categories = [
+    "command-line-utilities",
+    "development-tools::profiling",
+    "development-tools"
+]
 include = ["/src", "LICENSE"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
