--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "blondie"
 description = "Collect CPU callstack samples from a windows process"
-version = "0.1.0-alpha4"
+version = "0.1.0-alpha5"
 edition = "2021"
 license = "MIT OR Apache-2.0 OR BSL-1.0 OR MPL-2.0 OR Zlib OR Unlicense"
 homepage = "https://github.com/nico-abram/blondie/"
@@ -16,7 +16,9 @@ categories = [
 ]
 include = ["/src", "LICENSE"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[package.metadata.docs.rs]
+default-target = "x86_64-pc-windows-msvc"
+
 [dependencies]
 windows = { version = "0.36.1", features = [
     "Win32_System_Diagnostics_Etw",
