--- a/.github/workflows/blondie.yml
+++ b/.github/workflows/blondie.yml
@@ -4,8 +4,7 @@ on:
     branches:
       - "**"
   pull_request:
-    branches:
-      - "**"
+    types: [opened, synchronize, reopened, closed]
 jobs:
   windows:
     strategy:
