Only run CI workflows on the main branch
Saves on duplicate workflows for pull requests.

--- a/.github/workflows/blondie.yml
+++ b/.github/workflows/blondie.yml
@@ -1,8 +1,7 @@
 name: blondie
 on:
   push:
-    branches:
-      - "**"
+    branches: ['main']
   pull_request:
     types: [opened, synchronize, reopened, closed]
 jobs:
